# mpi-actor

./: .gitignore  CMakeLists.txt  README.md  TODO
include/: actr.hpp
include/actr/: ActrBase.hpp  Controller.hpp  exceptions.hpp  helpers.hpp
include/biol/: frog-functions.hpp  ran2.hpp
include/frogs/: Clock.hpp  Frog.hpp  History.hpp  LandCell.hpp
src/: frogs.cpp
src/actr/: ActrBase.cpp  helpers.cpp
src/biol/: frog-functions.cpp  ran2.cpp
src/frogs/: Clock.cpp  Frog.cpp  History.cpp  LandCell.cpp
